--- a/css/kokoa.css
+++ b/css/kokoa.css
@@ -1,16 +1,6 @@
 @import "reset.css";
 @import "variable.css";
-
-@import "status.css";
-@import "navbar.css";
-@import "menubar.css";
-
-@import "welcom.css";
-@import "friends.css";
-@import "chat.css";
-@import "find.css";
-@import "more.css";
-@import "setting.css";
+@import "screen.css";
 
 body {
   /* padding: 0px 10px; */
@@ -25,17 +15,18 @@ body {
 .find-box,
 .more-box {
   padding: 5px 15px;
-  background-color: burlywood;
+  /* background-color: burlywood; */
 }
 
+/* user profile list */
 .user-box,
 .friend-list {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 3px 5px;
-  margin: 5px 0px;
-  background-color: cornflowerblue;
+  margin: 10px 0px;
+  /* background-color: cornflowerblue; */
 }
 
 .user-box img {
@@ -74,7 +65,7 @@ body {
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-between;
-  background-color: thistle;
+  /* background-color: thistle; */
 }
 
 .user-info:last-child h4 {
@@ -110,6 +101,7 @@ body {
   margin-left: 5px;
   cursor: pointer;
 }
+
 /* box breaker bar */
 .box__breaker {
   display: flex;
@@ -120,7 +112,7 @@ body {
   color: var(--color-lightgray);
   border-top: solid 0.3px var(--color-lightgray);
   padding: 10px 0px;
-  margin: 15px 0px;
+  margin: 10px 0px;
   /* background-color: violet; */
 }
 
@@ -128,7 +120,7 @@ body {
   cursor: pointer;
 }
 
-/* tools box */
+/* item tools box */
 .find-box__tools {
   display: flex;
   align-items: center;
@@ -142,9 +134,22 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  position: relative;
   color: var(--color-grayfont);
   width: 20%;
-  height: 70px;
-  margin: 1% 2.5%;
+  height: 60px;
+  margin: 10px 2.5% 20px 2.5%;
+  cursor: pointer;
   /* background-color: coral; */
+}
+
+.tools-items__name {
+  text-align: center;
+  justify-content: end;
+  font-size: var(--font-smaller);
+  font-weight: 500;
+}
+
+.tools-items:hover {
+  color: var(--color-theme);
 }
