--- a/css/navbar.css
+++ b/css/navbar.css
@@ -2,10 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 20px 0px;
+  box-sizing: border-box;
+  margin-top: 30px;
   font-size: 20px;
   padding: 10px 15px;
-  background-color: cadetblue;
+  /* background-color: cadetblue; */
 }
 
 .nav-bar__title {
