--- a/css/setting.css
+++ b/css/setting.css
@@ -1,7 +1,60 @@
+@import "status.css";
+@import "navbar.css";
+@import "menubar.css";
+
 .setting-box {
   display: flex;
   flex-direction: column;
   padding: 5px 15px;
   overflow-y: scroll;
-  background-color: burlywood;
+}
+.setting-box__section:last-child {
+  border-top: 0.5px solid var(--color-lightgray);
+  /* overflow-y: scroll; */
+  /* height: 50vh; */
+  padding-top: 10px;
+  margin-top: 10px;
+  /* box-sizing: border-box; */
+}
+
+.setting__items {
+  display: flex;
+  justify-content: space-between;
+  color: var(--color-black);
+  border-radius: 5px;
+  padding: 16px 3px;
+  margin: 5px 0px;
+  cursor: pointer;
+}
+
+.setting__items-name {
+  position: relative;
+}
+
+.setting__items-additional {
+  color: var(--color-lightgray);
+}
+
+.setting__items-noti {
+  position: absolute;
+  right: -20px;
+  bottom: 0px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  line-height: 15px;
+  font-size: var(--font-smaller);
+  text-align: center;
+  color: white;
+  background-color: tomato;
+}
+
+.setting__items-name i {
+  color: var(--color-grayfont);
+  margin-right: 10px;
+}
+
+.setting__items:hover {
+  background-color: var(--color-lightTheme);
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.11);
 }
