--- a/css/find.css
+++ b/css/find.css
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  height: 80px;
+  /* height: 80px; */
   /* background-color: thistle; */
 }
 
