--- a/css/find.css
+++ b/css/find.css
@@ -10,7 +10,7 @@
   color: var(--color-lightgray);
 }
 .find-box__openChats {
-  height: 200px;
+  height: 30vh;
   overflow-y: scroll;
   /* background-color: aqua; */
 }
@@ -30,7 +30,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  /* height: 80px; */
+  height: 80px;
   /* background-color: thistle; */
 }
 
