--- a/css/find.css
+++ b/css/find.css
@@ -10,7 +10,7 @@
   color: var(--color-lightgray);
 }
 .find-box__openChats {
-  height: 30vh;
+  height: 500px;
   overflow-y: scroll;
   /* background-color: aqua; */
 }
