--- a/css/room.css
+++ b/css/room.css
@@ -1,9 +1,130 @@
 @import "status.css";
 @import "navbar.css";
 
+#chatting-room__status {
+  background-color: rgba(192, 174, 240, 0.226);
+}
 #chatting-room {
   position: absolute;
   width: 100vw;
   height: 100vh;
   background-color: var(--color-lightTheme);
+}
+
+#chatRoom {
+  margin-left: 50px;
+}
+
+.chatting__box-date {
+  width: 200px;
+  text-align: center;
+  font-size: var(--font-small);
+  color: white;
+  border-radius: 20px;
+  padding: 7px 10px;
+  margin: auto;
+  margin-top: 15px;
+  margin-bottom: 30px;
+  background-color: rgba(128, 128, 128, 0.342);
+}
+
+.chat-list {
+  display: flex;
+  margin: 20px 0px;
+  /* background-color: rgb(77, 95, 49); */
+}
+
+.chat-list__img {
+  border-radius: 20px;
+  margin-right: 10px;
+}
+
+.chat__bubble-friend {
+  position: relative;
+  max-width: 180px;
+  border-radius: 0px 20px 20px 20px;
+  padding: 5px 10px;
+  margin-top: 5px;
+  background-color: rgba(255, 255, 255, 0.562);
+}
+
+.chat__bubble-friend h6 {
+  position: absolute;
+  right: -35px;
+  bottom: 0px;
+  font-size: var(--font-smaller);
+  color: var(--color-lightgray);
+}
+
+.chat-list--friend {
+  animation: slide-in-from-left 0.5s ease;
+}
+.chat-list--user {
+  justify-content: flex-end;
+  animation: slide-in-from-right 0.5s linear;
+}
+
+.chat__bubble-user {
+  position: relative;
+  max-width: 180px;
+  border-radius: 20px 0px 20px 20px;
+  padding: 5px 10px;
+  background-color: rgba(255, 255, 255, 0.562);
+}
+.chat__bubble-friend h4,
+.chat__bubble-user h4 {
+  word-break: break-all;
+}
+.chat__bubble-user h6 {
+  position: absolute;
+  left: -35px;
+  bottom: 0px;
+  font-size: var(--font-smaller);
+  color: var(--color-lightgray);
+}
+
+/* typing box */
+
+.typing-bar {
+  width: 100%;
+  height: 40px;
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: rgba(0, 0, 0, 0.486);
+  background-color: white;
+}
+
+.typing-bar__box {
+  width: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: rgba(128, 128, 128, 0.479) solid 0.3px;
+  border-radius: 20px;
+  padding: 2px 2px 2px 7px;
+  background-color: rgba(190, 190, 190, 0.144);
+  margin-left: 15px;
+}
+
+.typing-bar__box input {
+  width: 80%;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  font-size: 15px;
+}
+
+#emoticon {
+  font-size: 25px;
+  margin: 0px 5px;
+  cursor: pointer;
+}
+
+.fa-arrow-alt-circle-up {
+  color: var(--color-theme);
+  cursor: pointer;
 }
