--- a/css/welcom.css
+++ b/css/welcom.css
@@ -82,3 +82,19 @@
   color: var(--color-theme);
   font-weight: bold;
 }
+
+#splashee {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 150px;
+  color: aliceblue;
+  background-color: var(--color-theme);
+  animation: splashScreen 2s ease-in-out forwards;
+  /* animation-delay: 1s; */
+}
