--- a/css/welcom.css
+++ b/css/welcom.css
@@ -8,7 +8,7 @@
   align-items: center;
   justify-content: space-around;
   text-align: center;
-  margin: 50px 0px;
+  margin: 150px 0px 50px 0px;
   /* background-color: aqua; */
 }
 
